# livekitmonaquehablav2

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Dockerfile.local  README.md  agent.py  docker-compose.yml  livekit.yaml  pyproject.toml  render.yaml  requirements.txt
agents/: __init__.py  conversational_agent.py
core/: __init__.py  config.py  persona_manager.py  tools.py
core/tools/: __init__.py  base.py  external_tools.py  frontend_rpc_tools.py  media_tools.py  persona_tools.py  system_tools.py  user_data_tools.py
frontend/: cspell.json  index.html  readme_voice_assistant.md  rpc-test.html
frontend/css/: guiaCompletadeVariablesCSSmd  styles.css  theme.css  video-call.css  voice-call.css
frontend/js/: app.js  config.js  ui-manager.js  video-call-manager.js  voice-agent-sdk.js  voice-agent.js  voice-call.js
personas/: coach.yaml  profesor.yaml  psicologo.yaml  rosalia.yaml  sofia.yaml
services/: __init__.py  audio_replay.py  health_check.py  monitoring.py  token_server.py
